Remove `DelayedActions`, example scripts, and MotionDetector rule. Add HRV-focused implementation, including new control framework, updated Dockerfile for custom JDK 21 image, and refined documentation. Migrate scheduling to `ScheduledExecutorService`.